[package]
name = "kaggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
csv = "1.1"
ndarray = "0.15.6"
smartcore="0.3.2"
plotters = "0.3.5"
polars = { version = "0.35.4", features = ["ndarray","to_dummies","lazy","describe","strings","list_count"] }
linfa-nn = "0.7.0"
chrono = "0.4.31"
linfa-linear = "0.7.0"
xgboost = "0.1.4"