[package]
name = "kaggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
csv = "1.1"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
smartcore="0.3.2"
plotters = "0.3.5"
polars = { version = "0.36.2", features = ["ndarray","to_dummies","lazy","describe","strings","list_count","describe","cov"] }
polars-lazy = { version = "0.36.2", features = [] }

linfa-nn = "0.7.0"
chrono = "0.4.31"
linfa-linear = "0.7.0"
linfa-logistic = "0.7.0"

xgboost = "0.1.4"

burn = { version = "0.11.1", features = ["wgpu", "train"] }

serde_bytes = "0.11"
serde = { version = "1.0.195" } 
image = "0.24.8"
serde-big-array = "0.5.1"
serde_derive = "1.0.195"
rayon = "1.8.1"