[package]
name = "kaggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
smartcore="0.3.2"
polars = { version = "0.36.2", features = ["ndarray","to_dummies","lazy","describe","strings","list_count","describe","cov"] }
polars-lazy = { version = "0.36.2", features = [] }
xgboost = "0.1.4"
rayon = "1.8.1"
candle-core = "0.4.1"
candle-nn = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }


anyhow = "1.0.80"

[profile.release]
opt-level = 0